// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h2>
    Viewing 
    3
     
    expenses
     totaling 
    $2,345,678.90
    .
  </h2>
</div>
`;

exports[`should correctly render ExpensesSummary with one expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totaling 
    $234.56
    .
  </h2>
</div>
`;
